[package]
name = "rust-sample"
version = "0.1.0"
authors = ["Taiki Hayashi <grandcolline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2.0"
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }

[build-dependencies]
tonic-build = "0.2.0"
